--- a/linux-sunlight-generic/debian.generic/changelog
+++ b/linux-sunlight-generic/debian.generic/changelog
@@ -1,8 +1,8 @@
-linux (5.15.0-22.22) jammy; urgency=medium
+linux (5.15.0-32.32) 3.0; urgency=medium
 
-  * jammy/linux: 5.15.0-22.22 -proposed tracker (LP: #1960290)
+  * 3.0/linux: 5.15.0-32.32
 
- -- Paolo Pisati <paolo.pisati@canonical.com>  Tue, 08 Feb 2022 10:48:49 +0100
+ -- Ionut Nechita <ionut_n2001@yahoo.com>  Wed, 06 Apr 2022 08:15:50 +0200
 
 linux (5.15.0-21.21) jammy; urgency=medium
 
